NEXT-944 - Prevent stacked tooltip events

--- a/Resources/administration/src/app/assets/less/directives/tooltip.less
+++ b/Resources/administration/src/app/assets/less/directives/tooltip.less
@@ -23,35 +23,27 @@
         background: @sw-tooltip-color-background;
     }
 
-    &.sw-tooltip--top {
-        &:before {
-            bottom: -4px;
-            margin-left: -4px;
-            left: 50%;
-        }
+    &.sw-tooltip--top:before {
+        bottom: -4px;
+        margin-left: -4px;
+        left: 50%;
     }
 
-    &.sw-tooltip--bottom {
-        &:before {
-            top: -4px;
-            margin-left: -4px;
-            left: 50%;
-        }
+    &.sw-tooltip--bottom:before {
+        top: -4px;
+        margin-left: -4px;
+        left: 50%;
     }
 
-    &.sw-tooltip--left {
-        &:before {
-            top: 50%;
-            margin-top: -4px;
-            right: -4px;
-        }
+    &.sw-tooltip--left:before {
+        top: 50%;
+        margin-top: -4px;
+        right: -4px;
     }
 
-    &.sw-tooltip--right {
-        &:before {
-            top: 50%;
-            margin-top: -4px;
-            left: -4px;
-        }
+    &.sw-tooltip--right:before {
+        top: 50%;
+        margin-top: -4px;
+        left: -4px;
     }
 }
