--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.less
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.less
@@ -1,6 +1,4 @@
-.sw-settings-language-detail {
-    .sw-settings-language--alert-change-parent {
-        margin-top: 30px;
-        margin-bottom: 0;
-    }
+.sw-settings-language-detail .sw-settings-language--alert-change-parent {
+    margin-top: 30px;
+    margin-bottom: 0;
 }
