NEXT-1040 - Remove media count from catalog details; Disable media in products if catalog is not set

--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -48,7 +48,7 @@
                 {% endblock %}
 
                 <template slot="card-view-sidebar">
-                    <sw-sidebar-media-item v-if="!product.isLocal"
+                    <sw-sidebar-media-item
                             @sw-sidebar-media-item-add-item-to-product="onAddItemToProduct">
                     </sw-sidebar-media-item>
                 </template>
