--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -10,14 +10,17 @@
                 {% block sw_media_grid_media_item_slot_media_preview %}
                     <template slot="media-item-preview">
                         {% block sw_media_grid_item_selected_indicator %}
-                            <sw-field
-                                v-if="!isList"
-                                class="sw-media-grid-media-item__selected-indicator"
-                                :class="selectionIndicatorClasses"
-                                type="checkbox"
-                                :value="selected"
-                                @click.self="doSelectItem">
-                            </sw-field>
+                            <div v-if="!isList"
+                                 class="sw-media-grid-media-item__selected-indicator"
+                                 :class="selectionIndicatorClasses"
+                                 @click="doSelectItem">
+
+                                <sw-icon
+                                    v-if="listSelected"
+                                    size="16px"
+                                    name="small-default-checkmark-line-small">
+                                </sw-icon>
+                            </div>
                         {% endblock %}
 
                         {% block sw_media_grid_media_item_preview %}
