--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -9,6 +9,10 @@
 @sw-media-quickinfo-metadata-color:     @color-gutenberg;
 
 .sw-media-quickinfo {
+    .sw-media-quickinfo__alert-file-missing {
+        margin: 0 25px 25px;
+    }
+
     .sw-media-quickinfo__collapse {
         padding-bottom: 25px;
     }
