--- a/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
@@ -5,7 +5,7 @@
               :title="$tc('global.sw-media-modal-delete.titleModal')">
 
         {% block sw_media_modal_body %}
-            {{ $tc('global.sw-media-modal-delete.deleteMessage', itemsToDelete.length, { mediaName: itemsToDelete[0].name, count: itemsToDelete.length }) }}
+            {{ $tc('global.sw-media-modal-delete.deleteMessage', itemsToDelete.length, { mediaName: pathToFileName(itemsToDelete[0].fileName), count: itemsToDelete.length }) }}
         {% endblock %}
 
         {% block sw_media_modal_footer %}
