--- a/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
@@ -77,7 +77,7 @@
 
             {% block sw_search_bar_item_media_label %}
             <span class="sw-search-bar-item__label">
-                        {{ item.entity.name }}
+                        {{ item.entity.fileName | pathToFileName}}
                     </span>
             {% endblock %}
 
