NEXT-1053 - don't use thumbnails in sidebar

--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
@@ -13,7 +13,7 @@
                            :autoplay="autoplay"
                            controlsList="nodownload"
                            class="sw-media-preview__item">
-                        <source :src="urlFromItem" :type="item.mimeType">
+                        <source :src="item.url" :type="item.mimeType">
                         {{ $tc('global.sw-media-preview.fallbackVideoTagSupport') }}
                     </video>
                     <button class="sw-media-preview__play-button" v-if="!showControls" @click="onPlayClick">
