--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -80,7 +80,7 @@
                     {% block sw_media_quickinfo_preview_content %}
                         <div class="sw-media-quickinfo__collapse-content">
                             {% block sw_media_quickinfo_preview_item %}
-                                <sw-media-preview :item="item" :showControls="true" :autoplay="autoplay">
+                                <sw-media-preview :item="item" :showControls="true" :autoplay="autoplay" :useThumbnails="false">
                                 </sw-media-preview>
                             {% endblock %}
                         </div>
