next-1052 - Max height for placeholder icons

--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
@@ -44,7 +44,7 @@
 
             <template v-else>
                 {% block sw_media_preview_file_type_else %}
-                    <sw-icon class="sw-media-preview__item"
+                    <sw-icon class="sw-media-preview__item sw-media-preview__placeholder"
                              :name="placeholderIcon"
                              size="90%"
                              multicolor>
