--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -62,4 +62,9 @@
         height: @sw-media-preview-play-button-size;
         width: @sw-media-preview-play-button-size;
     }
+
+    .sw-media-preview__placeholder {
+        padding: 0;
+        max-height: 100px;
+    }
 }
