--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -1,13 +1,22 @@
 {% block sw_product_basic_form %}
     <div class="product-basic-form">
 
-        {% block sw_product_basic_form_title_field %}
-            <sw-field type="text"
-                      :label="$tc('sw-product.basicForm.labelTitle')"
-                      :placeholder="$tc('sw-product.basicForm.placeholderTitle')"
-                      v-model="product.name">
-            </sw-field>
-        {% endblock %}
+        <sw-container columns="1fr 300px" gap="0px 30px">
+            {% block sw_product_basic_form_title_field %}
+                <sw-field type="text"
+                          :label="$tc('sw-product.basicForm.labelTitle')"
+                          :placeholder="$tc('sw-product.basicForm.placeholderTitle')"
+                          v-model="product.name">
+                </sw-field>
+            {% endblock %}
+
+            {% block sw_product_settings_form_active_field %}
+                <sw-field type="boolean"
+                          :label="$tc('sw-product.settingsForm.labelActive')"
+                          v-model="product.active">
+                </sw-field>
+            {% endblock %}
+        </sw-container>
 
         {% block sw_product_basic_form_description_field %}
             <sw-text-editor :label="$tc('sw-product.basicForm.labelDescription')"
