--- a/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -24,67 +24,71 @@
             </sw-container>
 
             <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
-                {% block sw_product_settings_form_width_field %}
-                    <sw-field type="number"
-                              :label="$tc('sw-product.settingsForm.labelWidth')"
-                              :placeholder="$tc('sw-product.settingsForm.placeholderWidth')"
-                              suffix="mm"
-                              step="0.01"
-                              v-model="product.width">
-                    </sw-field>
-                {% endblock %}
-
-                {% block sw_product_settings_form_height_field %}
-                    <sw-field type="number"
-                              :label="$tc('sw-product.settingsForm.labelHeight')"
-                              :placeholder="$tc('sw-product.settingsForm.placeholderHeight')"
-                              suffix="mm"
-                              step="0.01"
-                              v-model="product.height">
-                    </sw-field>
-                {% endblock %}
-
-                {% block sw_product_settings_form_length_field %}
-                    <sw-field type="number"
-                              :label="$tc('sw-product.settingsForm.labelLength')"
-                              :placeholder="$tc('sw-product.settingsForm.placeholderLength')"
-                              suffix="mm"
-                              step="0.01"
-                              v-model="product.length">
-                    </sw-field>
-                {% endblock %}
-
-                {% block sw_product_settings_form_weight_field %}
-                    <sw-field type="number"
-                              :label="$tc('sw-product.settingsForm.labelWeight')"
-                              :placeholder="$tc('sw-product.settingsForm.placeholderWeight')"
-                              suffix="kg"
-                              step="0.01"
-                              v-model="product.weight">
-                    </sw-field>
-                {% endblock %}
-            </sw-container>
-
-            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
-                <sw-container columns="1fr 1fr" gap="0px 10px">
-
-                    {% block sw_product_settings_form_min_purchase_field %}
+                <sw-container columns="1fr 1fr" gap="0px 30px">
+                    {% block sw_product_settings_form_width_field %}
                         <sw-field type="number"
-                                  :label="$tc('sw-product.settingsForm.labelMinPurchase')"
-                                  :placeholder="$tc('sw-product.settingsForm.placeholderMinPurchase')"
-                                  v-model="product.minPurchase">
+                                  :label="$tc('sw-product.settingsForm.labelWidth')"
+                                  :placeholder="$tc('sw-product.settingsForm.placeholderWidth')"
+                                  suffix="mm"
+                                  step="0.01"
+                                  v-model="product.width">
                         </sw-field>
                     {% endblock %}
 
-                    {% block sw_product_settings_form_max_purchase_field %}
+                    {% block sw_product_settings_form_height_field %}
                         <sw-field type="number"
-                                  :label="$tc('sw-product.settingsForm.labelMaxPurchase')"
-                                  :placeholder="$tc('sw-product.settingsForm.placeholderMaxPurchase')"
-                                  v-model="product.maxPurchase">
+                                  :label="$tc('sw-product.settingsForm.labelHeight')"
+                                  :placeholder="$tc('sw-product.settingsForm.placeholderHeight')"
+                                  suffix="mm"
+                                  step="0.01"
+                                  v-model="product.height">
                         </sw-field>
                     {% endblock %}
                 </sw-container>
 
+                <sw-container columns="1fr 1fr" gap="0px 30px">
+                    {% block sw_product_settings_form_length_field %}
+                        <sw-field type="number"
+                                  :label="$tc('sw-product.settingsForm.labelLength')"
+                                  :placeholder="$tc('sw-product.settingsForm.placeholderLength')"
+                                  suffix="mm"
+                                  step="0.01"
+                                  v-model="product.length">
+                        </sw-field>
+                    {% endblock %}
+
+                    {% block sw_product_settings_form_weight_field %}
+                        <sw-field type="number"
+                                  :label="$tc('sw-product.settingsForm.labelWeight')"
+                                  :placeholder="$tc('sw-product.settingsForm.placeholderWeight')"
+                                  suffix="kg"
+                                  step="0.01"
+                                  v-model="product.weight">
+                        </sw-field>
+                    {% endblock %}
+                </sw-container>
+            </sw-container>
+
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
+                {% block sw_product_settings_form_min_purchase_field %}
+                    <sw-field type="number"
+                              :label="$tc('sw-product.settingsForm.labelMinPurchase')"
+                              :placeholder="$tc('sw-product.settingsForm.placeholderMinPurchase')"
+                              v-model="product.minPurchase">
+                    </sw-field>
+                {% endblock %}
+
+                {% block sw_product_settings_form_max_purchase_field %}
+                    <sw-field type="number"
+                              :label="$tc('sw-product.settingsForm.labelMaxPurchase')"
+                              :placeholder="$tc('sw-product.settingsForm.placeholderMaxPurchase')"
+                              v-model="product.maxPurchase">
+                    </sw-field>
+                {% endblock %}
+
+            </sw-container>
+
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                 {% block sw_product_settings_form_ean_field %}
                     <sw-field type="text"
                               :label="$tc('sw-product.settingsForm.labelEan')"
@@ -92,17 +96,18 @@
                               v-model="product.ean">
                     </sw-field>
                 {% endblock %}
-            </sw-container>
 
-            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
-                {% block sw_product_settings_form_pseudo_sales_field %}
-                    <sw-field type="number"
-                              :label="$tc('sw-product.settingsForm.labelPseudoSales')"
-                              :placeholder="$tc('sw-product.settingsForm.placeholderPseudoSales')"
-                              v-model="product.pseudoSales">
+                {% block sw_product_settings_form_manufacturer_number_field %}
+                    <sw-field type="text"
+                              :label="$tc('sw-product.settingsForm.labelManufacturerNumber')"
+                              :placeholder="$tc('sw-product.settingsForm.placeholderManufacturerNumber')"
+                              v-model="product.manufacturerNumber">
                     </sw-field>
                 {% endblock %}
+            </sw-container>
 
+
+            <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                 {% block sw_product_settings_form_stock_field %}
                     <sw-field type="number"
                               :label="$tc('sw-product.settingsForm.labelStock')"
@@ -113,13 +118,6 @@
             </sw-container>
 
             <sw-container columns="repeat(auto-fit, minmax(200px, 1fr)" gap="0px 30px" align="center">
-                {% block sw_product_settings_form_active_field %}
-                    <sw-field type="boolean"
-                              :label="$tc('sw-product.settingsForm.labelActive')"
-                              v-model="product.active">
-                    </sw-field>
-                {% endblock %}
-
                 {% block sw_product_settings_form_shipping_free_field %}
                     <sw-field type="boolean"
                               :label="$tc('sw-product.settingsForm.labelShippingFree')"
