--- a/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -11,7 +11,7 @@
                 <slot>
                     {% block sw_card_slot_default %}{% endblock %}
                 </slot>
-                <slot name="grid">
+                <slot name="grid" :title="title">
                     {% block sw_card_slot_grid %}{% endblock %}
                 </slot>
 
