NEXT-1059 - Truncate filenames in the middle, show extension everytime

--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -45,9 +45,11 @@
                         </sw-field>
                         <div v-else
                              class="sw-media-grid-media-item__name"
-                             :title="item.fileName | pathToFileName"
+                             ref="itemName"
+                             :title="item.fileName + '.' + item.fileExtension | pathToFileName"
+                             :data-last-content="lastContent"
                              @dblclick="startInlineEdit">
-                            {{ item.fileName | pathToFileName }}
+                            {{ item.fileName + '.' + item.fileExtension | pathToFileName }}
                         </div>
                     </template>
                 {% endblock %}
