--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.less
@@ -15,5 +15,10 @@
 
     > dd {
         .truncate();
+
+        &:before {
+            content: attr(data-last-content);
+            float: right;
+        }
     }
 }
