NEXT-775 - use the tooltip directive in media

--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -23,6 +23,7 @@
                                 :key="mediaItem.mediaId"
                                 :isCover="isCover(mediaItem)"
                                 :isPlaceholder="mediaItem.isPlaceholder"
+                                :tooltip="getTooltipForMedia(mediaItem.media)"
                                 :url="getPreviewForMedia(mediaItem.media)"
                                 :downloadable="true"></sw-image>
                     </template>
