--- a/Resources/administration/src/app/component/base/sw-image/sw-image.html.twig
+++ b/Resources/administration/src/app/component/base/sw-image/sw-image.html.twig
@@ -2,11 +2,7 @@
 <div class="sw-image" :class="swImageClasses">
     <template v-if="!isPlaceholder">
         {% block sw_product_media_item_image %}
-            <img class="sw-image__image" :src="url" :alt="altText">
-        {% endblock %}
-
-        {% block sw_product_media_item_tooltip %}
-            <div class="sw-image__tooltip" v-if="altText">{{ altText }}</div>
+            <img class="sw-image__image" :src="url" :alt="altText" v-tooltip.bottom="{ message: this.tooltip }">
         {% endblock %}
         <sw-context-button class="sw-image__context-button">
             {% block sw_product_media_item_context %}
