NEXT-1048 - Replace preview size slider with dropdown

--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
@@ -10,4 +10,16 @@
         grid-column-gap: 15px;
         grid-row-gap: 10px;
     }
+
+    .sw-media-grid__presentation-small-preview {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
+
+    .sw-media-grid__presentation-medium-preview {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+
+    .sw-media-grid__presentation-large-preview {
+        grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    }
 }
