--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
@@ -2,8 +2,7 @@
     <div class="sw-media-grid" @mousedown.left="onMouseDown" >
         <slot name="content">
             {% block sw_media_grid_slot_content %}
-                <div class="sw-media-grid__content"
-                     :style="mediaColumnDefinitions">
+                <div class="sw-media-grid__content" :class="presentationClass">
                     <slot>{% block sw_media_grid_default_slot %}{% endblock %}</slot>
                 </div>
             {% endblock %}
