--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -69,7 +69,7 @@
     }
 
     .sw-media-catalog__media-grid {
-        padding-left: 10px;
+        padding: 0 10px 0 10px;
     }
 
     .sw-media-catalog__change {
