--- a/Resources/administration/src/app/component/sidebar/sw-sidebar/sw-sidebar.html.twig
+++ b/Resources/administration/src/app/component/sidebar/sw-sidebar/sw-sidebar.html.twig
@@ -1,5 +1,5 @@
 {% block sw_sidebar %}
-    <aside class="sw-sidebar">
+    <aside class="sw-sidebar" :class="sidebarClasses">
         {% block sw_sidebar_navigation %}
             <nav class="sw-sidebar__navigation">
                 {% block sw_sidebar_navigation_list %}
