--- a/Resources/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.less
+++ b/Resources/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.less
@@ -4,10 +4,11 @@
 @sw-sidebar-navigation-item-icon-color-active:       @color-shopware-blue;
 @sw-sidebar-navigation-item-hover-color-background:  @color-cadet-blue;
 @sw-sidebar-navigation-item-active-color-background: @color-cadet-blue;
+@sw-sidebar-navigation-item-size:                    64px;
 
 .sw-sidebar-navigation-item {
-    width: 64px;
-    height: 64px;
+    width: @sw-sidebar-navigation-item-size;
+    height: @sw-sidebar-navigation-item-size;
     border: none;
     color: @sw-sidebar-navigation-item-icon-color;
     background: none;
