--- a/Resources/administration/src/app/component/sidebar/sw-sidebar/sw-sidebar.less
+++ b/Resources/administration/src/app/component/sidebar/sw-sidebar/sw-sidebar.less
@@ -2,13 +2,22 @@
 
 @sw-sidebar-color-background: @color-white;
 @sw-sidebar-color-border:     @color-steam-cloud;
+@sw-sidebar-item-width:       400px;
+@sw-sidebar-navigation-width: 64px;
+@sw-sidebar-transition:       cubic-bezier(.50, .32, .01, 1) .3s;
 
 .sw-sidebar {
     height: 100%;
     background-color: @sw-sidebar-color-background;
     border-left: 1px solid @sw-sidebar-color-border;
     display: grid;
-    grid-template-columns: 64px auto;
+    grid-template-columns: @sw-sidebar-navigation-width auto;
+    width: @sw-sidebar-navigation-width;
+    transition: width @sw-sidebar-transition;
+
+    &.is--opened {
+        width: @sw-sidebar-navigation-width + @sw-sidebar-item-width;
+    }
 
     .sw-sidebar__navigation {
         height: 100%;
