--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -8,7 +8,7 @@
                     :autoUpload="false"
                     :caption="$tc('sw-product.mediaForm.uploadCaption')"
                     @media-upload-success="successfulUpload"
-                    @new-upload="handleNewUpload">
+                    @new-upload="onNewUpload">
             </sw-media-upload-button>
         {% endblock %}
 
