--- a/Resources/administration/src/app/component/media/sw-media-upload-button/sw-media-upload-button.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload-button/sw-media-upload-button.html.twig
@@ -1,67 +1,116 @@
 {% block sw_media_upload_button %}
     <div class="sw-media-upload-button">
-        <div v-if="variant == 'compact'">
-            {% block sw_media_upload_context_item_file_upload %}
-                <sw-button variant="primary" @click="onClickUpload">
-                    {{ $tc('global.sw-media-upload-button.buttonFileUpload') }}
-                </sw-button>
-            {% endblock %}
+        {% block sw_media_upload_button_compact %}
+            <div v-if="variant == 'compact'" class="sw-media-upload-button__content">
+                {% block sw_media_upload_compact_button_file_upload %}
+                    <sw-button variant="primary" @click="onClickUpload">
+                        {{ $tc('global.sw-media-upload-button.buttonFileUpload') }}
+                    </sw-button>
+                {% endblock %}
 
-            {% block sw_media_upload_context_item_url_upload %}
-                <sw-button @click="openUrlModal">
-                    {{ $tc('global.sw-media-upload-button.buttonUrlUpload') }}
-                </sw-button>
-            {% endblock %}
-        </div>
+                {% block sw_media_upload_compact_button_url_upload %}
+                    <sw-button @click="openUrlModal">
+                        {{ $tc('global.sw-media-upload-button.buttonUrlUpload') }}
+                    </sw-button>
+                {% endblock %}
 
-        <template v-if="variant == 'regular'">
-            <div class="sw-upload-button__dropzone">
-                {%  block sw_media_upload_caption %}
-                    <div v-if="caption" class="sw-upload-button__upload-caption">
-                        <sw-icon name="default-action-cloud-upload" medium></sw-icon>
-                        {{ caption }}
+                {% block sw_media_upload_button_compact_url_form %}
+                    <sw-media-url-form
+                        v-if="showUrlInput"
+                        variant="modal"
+                        @closeModal="closeUrlModal"
+                        @sw-media-url-form-submit="onUrlUpload">
+                    </sw-media-url-form>
+                {% endblock %}
+            </div>
+        {% endblock %}
+
+        {% block sw_media_upload_button_regular %}
+            <div v-if="variant == 'regular'" class="sw-media-upload-button__content">
+                {% block sw_media_upload_button_regular_drop_zone %}
+                    <div class="sw-upload-button__dropzone">
+                        {% block sw_media_upload_button_regular_caption %}
+                            <div v-if="caption" class="sw-upload-button__upload-caption">
+                                <sw-icon name="default-action-cloud-upload" medium></sw-icon>
+                                {{ caption }}
+                            </div>
+                        {% endblock %}
+
+                        {% block sw_media_upload_button_regular_url_form %}
+                            <sw-media-url-form
+                                v-if="showUrlInput"
+                                variant="inline"
+                                @sw-media-url-form-submit="onUrlUpload">
+                            </sw-media-url-form>
+                        {% endblock %}
+
+                        {% block sw_media_upload_button_regular_file_upload %}
+                            <div v-else class="sw-media-upload-button__file-form">
+                                {% block sw_media_upload_button_regular_preview %}
+                                    <div v-if="showPreview" class="sw-media-upload-button__preview-placeholder">
+                                        {% block sw_media_upload_button_regular_preview_file %}
+                                            <sw-media-preview
+                                                v-if="hasPreviewFile"
+                                                class="sw-media-upload-button__preview"
+                                                :item="previewMediaEntity">
+                                            </sw-media-preview>
+                                        {% endblock %}
+
+                                        {% block sw_media_upload_button_regular_preview_fallback %}
+                                            <div v-else class="sw-media-upload-button__preview sw-media-upload-button__preview--is-fallback">
+                                                <sw-icon class="sw-media-upload-button__fallback-icon"
+                                                         name="default-object-image"
+                                                         small>
+                                                </sw-icon>
+                                            </div>
+                                        {% endblock %}
+                                    </div>
+                                {% endblock %}
+
+                                {% block sw_media_upload_button_regular_upload_button %}
+                                    <sw-button class="sw-media-upload-button__button"
+                                               variant="primary"
+                                               size="small"
+                                               @click="onClickUpload">
+                                        {{ $tc('global.sw-media-upload-button.buttonFileUpload') }}
+                                    </sw-button>
+                                {% endblock %}
+
+                                {% block sw_media_upload_button_regular_media_sidebar_button %}
+                                    <sw-button class="sw-media-upload-button__button"
+                                               size="small"
+                                               :disabled="!isMediaSidebarAvailable"
+                                               @click="onClickOpenMediaSidebar">
+                                        {{ $tc('global.sw-media-upload-button.buttonOpenMedia') }}
+                                    </sw-button>
+                                {% endblock %}
+                            </div>
+                        {% endblock %}
                     </div>
                 {% endblock %}
 
-                <div class="sw-upload-button__buttons">
-                    {% block sw_media_upload_url_upload_button %}
-                        <sw-button class="sw-media-upload-button__button-url"
-                                   size="small"
-                                   @click="openUrlModal">
-                            {{ $tc('global.sw-media-upload-button.buttonUrlUpload') }}
+                {% block sw_media_upload_button_regular_switch %}
+                    <div class="sw-media-upload-button__switch-container">
+                        <sw-button
+                            class="sw-media-upload-button__switch-mode"
+                            @click="toggleShowUrlFields">
+                            {{ toggleButtonCaption }}
                         </sw-button>
-                    {% endblock %}
-
-                    {% block sw_media_upload_file_upload_button %}
-                        <sw-button class="sw-media-upload-button__button-file"
-                                   variant="primary"
-                                   size="small"
-                                   @click="onClickUpload">
-                            {{ $tc('global.sw-media-upload-button.buttonFileUpload') }}
-                        </sw-button>
-                    {% endblock %}
-                </div>
+                    </div>
+                {% endblock %}
             </div>
-        </template>
+        {% endblock %}
 
-        <form class="sw-media-upload-button__form" ref="fileForm">
-            {% block sw_media_upload_file_input %}
+        {% block sw_media_upload_button_file_input %}
+            <form class="sw-media-upload-button__form" ref="fileForm">
                 <input class="sw-media-upload-button__file-input"
                        type="file"
                        id="files"
                        ref="fileInput"
                        accept="image/*"
-                       :multiple="allowMultiSelect"
+                       :multiple="multiSelect"
                        @change="onFileInputChange"/>
-            {% endblock %}
-        </form>
-
-        {% block sw_media_catalog_modal_upload %}
-            <sw-media-upload-url-modal
-                v-if="showUrlModal"
-                @closeModal="closeUrlModal"
-                @sw-media-upload-url-modal-submit="onUrlUpload">
-            </sw-media-upload-url-modal>
+            </form>
         {% endblock %}
     </div>
 {% endblock %}
