--- a/Resources/administration/src/app/component/media/sw-media-upload-button/sw-media-upload-button.less
+++ b/Resources/administration/src/app/component/media/sw-media-upload-button/sw-media-upload-button.less
@@ -1,25 +1,25 @@
 @import "~less/variables";
 
-@sw-media-upload-button-border-color:            @color-steam-cloud;
-@sw-media-upload-button-border-radius:           @border-radius-default;
+@sw-media-upload-button-border-color:             @color-steam-cloud;
+@sw-media-upload-button-border-color-highlighted: @color-shopware-blue;
+@sw-media-upload-button-border-radius:            @border-radius-default;
 @sw-media-upload-button-upload-background-color: @color-light-gray;
 @sw-media-caption-font-size:                     @font-size-large;
 @sw-media-caption-icon-color:                    #9AA8B5;
 
 .sw-media-upload-button {
+
     .sw-media-upload-button__file-input {
         display: none;
     }
 
     .sw-upload-button__dropzone {
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin: 20px 0 0 0;
         border: 1px dashed @sw-media-upload-button-border-color;
         border-radius: @sw-media-upload-button-border-radius;
         background-color: @sw-media-upload-button-upload-background-color;
         position: relative;
         padding: 20px;
-        text-align: center;
 
         .sw-upload-button__upload-caption {
             font-size: @sw-media-caption-font-size;
@@ -31,9 +31,57 @@
                 color: @sw-media-caption-icon-color;
             }
         }
+    }
 
-        .sw-upload-button__buttons {
-            text-align: center;
-        }
+    .sw-media-upload-button__file-form {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-column-gap: 8px;
+
+        align-items: center;
+        justify-content: center;
+        justify-items: start;
+    }
+
+    .sw-media-upload-button__file-form--preview {
+        grid-template-rows: auto auto;
+    }
+
+    .sw-media-upload-button__preview-placeholder {
+        grid-row-start: 1;
+        grid-row-end: span 2;
+    }
+
+    .sw-media-upload-button__preview {
+        width: 100px;
+        height: 100px;
+    }
+
+    .sw-media-upload-button__preview--is-fallback {
+        border: 1px dashed @sw-media-upload-button-border-color;
+        border-radius: @sw-media-upload-button-border-radius;
+    }
+
+    .sw-media-upload-button__fallback-icon {
+        position: relative;
+        vertical-align: unset;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .sw-media-upload-button__switch-container {
+        text-align: right;
+    }
+
+    .sw-media-upload-button__button {
+        justify-self: stretch;
+    }
+
+    .sw-media-upload-button__switch-mode {
+        margin: 10px;
+        border: 0 none;
+        color: @sw-media-upload-button-border-color-highlighted;
+        background: none;
     }
 }
